# my_key_value_db

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Google_tests/: CLIFeatureTest.cpp  CLIIntegrationTest.cpp  CMakeLists.txt  CommandParserTest.cpp  KVDatabaseDeleteTest.cpp  TypeConversionTest.cpp  test1.cpp
protos/: key_value_types.proto
src/CLI/: CommandParser.cpp  CommandParser.h  KVCli.cpp  KVCli.h  cxxopts.hpp
src/FSManager/: FSManager.cpp  FSManager.h
src/KVDatabase/: KVDatabase.cpp  KVDatabase.h
src/Parsers/JSONParser/Enums/: TokenType.h
src/Parsers/JSONParser/Structs/: Token.h
src/Parsers/JSONParser/Tokenizer/: JSONTokenizer.cpp  JSONTokenizer.h
src/cxxopts/: cxxopts.hpp
src/protos/: key_value_types.proto
src/structs/: ValueWithTypeObject.h
src/utils/: TypeConverter.cpp  TypeConverter.h
src/variants/: ValueTypeVariant.h
